# raytracer_ai

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_REVIEW_SUMMARY.md  CONTRIBUTING.md  GIT_SETUP.md  IMPLEMENTATION.md  INSTALL.md  Info.plist.in  LICENSE  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  SCENES_REFERENCE.md  TEMPLE_GUIDE.md  benchmark.sh  build.bat  build.sh  build_macos.sh  empty.scene  git-workflow.sh  malformed.scene
docs/: README.md  build_system.md  contributing.md  gpu_architecture.md  implementation.md  intersections.md  lighting.md  materials.md  parser.md  scene_format.md  scenes_reference.md
examples/: advanced_scene.scene  cornell_box.scene  lighting_demo.scene  lit_scene.scene  materials_showcase.scene  realtime.scene  scene1.scene  showcase.scene  simple_temple_view.scene  temple_final_complete.scene  temple_sacred.scene  temple_scene.scene  test_cleanup.scene  tetrahedron_test.scene  tetrahedron_view.scene
include/: bvh.h  camera.h  common.h  error_handling.h  geometry.h  gl_resource.h  gpu_raytracer.h  image.h  input.h  light.h  material.h  parser.h  profiler.h  raytracer.h  scene.h  shader.h  window.h
src/: bvh.cpp  camera.cpp  error_handling.cpp  geometry.cpp  gpu_raytracer.cpp  image.cpp  input.cpp  light.cpp  main.cpp  main_interactive.cpp  material.cpp  parser.cpp  parser.cpp.backup  profiler.cpp  raytracer.cpp  scene.cpp  shader.cpp  window.cpp
